...
        ) {

            item{
                Spacer(modifier = Modifier.height(48.dp))

                Text(
                    "Choose a date, time & area",
                    fontSize = 20.sp,
                )
            }

            items(dateLocationOptions){option ->
                Card(
...
    val sampleOptions = listOf(
        DateLocationOption(
            timing = DateTime(
                date = "2024-04-12",
                timeSlot = com.meetup.meetingapp.data.model.TimeSlot("09:00", "12:00")
            ),
            location = "Helsinki"
        ),
        DateLocationOption(
            timing = DateTime(
                date = "2024-04-12",
                timeSlot = com.meetup.meetingapp.data.model.TimeSlot("12:00", "15:00")
            ),
...
